[tool.poetry]
name = "async-web3"
version = "0.1.0"
description = ""
authors = ["Guanqun Lu <guanqunlu@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^9.0.2"
pytest-asyncio = "^0.15.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^5.5"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
