[tool.poetry]
name = "async-web3"
version = "0.3.0"
description = "Async Web3 library"
authors = ["Guanqun Lu <guanqunlu@outlook.com>"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/guanqun/async-web3.py"
repository = "https://github.com/guanqun/async-web3.py"

keywords = ["ethereum", "web3", "asyncio"]
include = [
    "LICENSE",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^8.1.0"
pytest-asyncio = "^0.15.1"
web3 = "^5.18.0"
eth-utils = "^1.10.0"
eth-abi = "^2.1.1"
eth-brownie = "^1.14.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
coverage = "^5.5"
mypy = "^0.812"
pylint = "^2.8.2"
Sphinx = "^4.0.2"
towncrier = "^21.3.0"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.towncrier]
package = "async_web3"
filename = "docs/releases.rst"
directory = "newsfragments"
underlines = ["-", "~", "^"]
issue_format = "`#{issue} <https://github.com/guanqun/async-web3.py/issues/{issue}>`__"
